<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page_bg"
    tools:context=".PortAddAsset">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="400dp"
        android:layout_height="600dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/portfolio_chart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="370dp"
            android:layout_height="563dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="515dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="202dp"

                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Type"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:entries="@array/typeAsset" />

                <!--                <Spinner-->
                <!--                    android:id="@+id/spinner"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="48dp"-->
                <!--                    -->
                <!--                    android:backgroundTint="@color/darkBlue"-->
                <!--                    android:backgroundTintMode="add"-->
                <!--                    android:entries="@array/typeAsset"-->
                <!--                    android:foregroundTintMode="add"-->

                <!--                    android:prompt="@string/Assets"-->
                <!--                    android:scrollbarSize="18dp"-->
                <!--                    android:theme="@style/mySpinnerItemStyle" />-->
                <!--                    android:popupBackground="@drawable/custom_background"-->

            </LinearLayout>

            <EditText
                android:id="@+id/addAccNo"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:backgroundTint="@color/lightGreen"
                android:ems="10"
                android:hint="@string/AccNum"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintVertical_bias="0.093" />

            <EditText
                android:id="@+id/addAmount"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/lightGreen"
                android:ems="10"
                android:hint="@string/Amount"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addAccNo" />

            <EditText
                android:id="@+id/addDuration"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:backgroundTint="@color/lightGreen"
                android:ems="10"
                android:hint="@string/Duration"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addAmount"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/addIntrest"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:backgroundTint="@color/lightGreen"
                android:ems="10"
                android:hint="@string/Inter"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addDuration"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/addBank"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:backgroundTint="@color/lightGreen"
                android:ems="10"
                android:hint="@string/Bank"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addIntrest"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/addBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Teal"
                android:drawableRight="@drawable/plus_math"
                android:text="@string/Add"
                android:textColor="@color/white"
                app:iconTint="@color/lightGreen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addBank" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>